enable auto register, add curl example in README

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     var OneSignal = window.OneSignal || [];
     OneSignal.push(["init", {
       appId: "91e56e15-5049-4f98-b331-1a941688d454",
-      autoRegister: false,
+      autoRegister: true,
       notifyButton: {
-        enable: true /* Set to false to hide */
+        enable: false /* Set to false to hide */
       }
     }]);
 
